added start button for the kicking off the experiment.

--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
         <script data-main="js/config" src="js/vendor/require.js"></script>
     </head>
     <body>
+        <div class="content">
+            <button class="btn btn-start js-btn-start">Start Experiment</button>
+        </div>
     </body>
 </html>
