implemented the continuous loop of saving blob to local database with the ability to cancel.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <body>
         <div class="content">
             <button class="btn btn-start js-btn-start">Start Experiment</button>
+            <button class="btn btn-stop hidden js-btn-stop">Stop Experiment</button>
         </div>
     </body>
 </html>
