added counter to display the amount (in mega bytes) that has been saved to the database.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     </head>
     <body>
         <div class="content">
+            <div class="counter js-counter">
+                <div class="count js-count">0.97</div>
+                <div class="unit">Megabytes</div>
+            </div>
+
             <button class="btn btn-start js-btn-start">Start Experiment</button>
             <button class="btn btn-stop hidden js-btn-stop">Stop Experiment</button>
         </div>
