message is now displayed when the browser doesn't support client side storage.

--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
     </head>
     <body>
         <div class="content">
-            <div class="counter js-counter">
+            <div class="counter hidden js-counter">
                 <div class="count js-count">0</div>
                 <div class="unit">Megabytes</div>
             </div>
 
             <button class="btn btn-start js-btn-start">Start Experiment</button>
             <button class="btn btn-stop hidden js-btn-stop">Stop Experiment</button>
+
+            <div class="note hidden js-not-supported">Client side storage is not supported in this browser.</div>
         </div>
     </body>
 </html>
