added note section to the experiment for displaying useful information about the browser. Currently this is whether the browser supports blob storage.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
             <button class="btn btn-stop hidden js-btn-stop">Stop Experiment</button>
 
             <div class="note hidden js-not-supported">Client side storage is not supported in this browser.</div>
+
+            <div class="notes hidden js-notes">
+                <h3>Additional Info</h3>
+                <ul></ul>
+            </div>
         </div>
     </body>
 </html>
