ensured the image continues to be saved when the user increases storage limit on iOS, if increase is denied then a message is shown.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                 <div class="unit">Megabytes</div>
             </div>
 
+            <p class="hidden js-limit-constraint">Unfortunately you've decided not to increase the storage limit so the experiment has finished.</p>
+
             <button class="btn btn-start js-btn-start">Start Experiment</button>
             <button class="btn btn-stop hidden js-btn-stop">Stop Experiment</button>
 
